fix order field

--- a/src/Template/cup/catalog/category/form.twig
+++ b/src/Template/cup/catalog/category/form.twig
@@ -193,7 +193,7 @@
                                             'type': 'number',
                                             'name': 'order',
                                             'args': {
-                                                'value': category.order is not empty ? category.order : '1',
+                                                'value': category.order ? category.order : '1',
                                                 'placeholder': '1',
                                                 'min': '0'
                                             }
