--- a/src/Template/cup/catalog/product/form.twig
+++ b/src/Template/cup/catalog/product/form.twig
@@ -551,7 +551,7 @@
                                             'type': 'number',
                                             'name': 'order',
                                             'args': {
-                                                'value': item.order is not empty ? item.order : '1',
+                                                'value': item.order ? item.order : '1',
                                                 'placeholder': '1',
                                                 'min': '0'
                                             }
