--- a/src/Template/cup/catalog/product/index.twig
+++ b/src/Template/cup/catalog/product/index.twig
@@ -17,7 +17,7 @@
                 <div class="card-header">
                     <div class="d-flex align-items-center">
                         {% if category %}
-                            <a href="/cup/catalog/product/{{ category.parent }}" class="btn btn-secondary btn-icon mr-1">
+                            <a href="/cup/catalog/product/{{ category.parent_uuid }}" class="btn btn-secondary btn-icon mr-1">
                                 <i class="fas fa-arrow-left"></i>
                             </a>
                         {% endif %}
