fix reference titles

--- a/src/Template/cup/navigation.twig
+++ b/src/Template/cup/navigation.twig
@@ -150,7 +150,7 @@
                 <ul class="nav nav-collapse">
                     <li>
                         <a href="/cup/reference/social-networks">
-                            <span class="sub-item">{{ 'Social Networks'|locale }}</span>
+                            <span class="sub-item">{{ 'Social networks'|locale }}</span>
                         </a>
                     </li>
                     <li>
@@ -170,12 +170,12 @@
                     </li>
                     <li>
                         <a href="/cup/reference/address-format">
-                            <span class="sub-item">{{ 'Address Format'|locale }}</span>
+                            <span class="sub-item">{{ 'Address format'|locale }}</span>
                         </a>
                     </li>
                     <li>
                         <a href="/cup/reference/store-locations">
-                            <span class="sub-item">{{ 'Store Locations'|locale }}</span>
+                            <span class="sub-item">{{ 'Store locations'|locale }}</span>
                         </a>
                     </li>
                     <li>
@@ -190,17 +190,17 @@
                     </li>
                     <li>
                         <a href="/cup/reference/length-classes">
-                            <span class="sub-item">{{ 'Length Classes'|locale }}</span>
+                            <span class="sub-item">{{ 'Length classes'|locale }}</span>
                         </a>
                     </li>
                     <li>
                         <a href="/cup/reference/weight-classes">
-                            <span class="sub-item">{{ 'Weight Classes'|locale }}</span>
+                            <span class="sub-item">{{ 'Weight classes'|locale }}</span>
                         </a>
                     </li>
                     <li>
                         <a href="/cup/reference/tax-rates">
-                            <span class="sub-item">{{ 'Tax Rates'|locale }}</span>
+                            <span class="sub-item">{{ 'Tax rates'|locale }}</span>
                         </a>
                     </li>
                     <li>
@@ -210,7 +210,7 @@
                     </li>
                     <li>
                         <a href="/cup/reference/order-dispatch">
-                            <span class="sub-item">{{ 'Shipping template'|locale }}</span>
+                            <span class="sub-item">{{ 'Dispatch template'|locale }}</span>
                         </a>
                     </li>
                 </ul>
