--- a/src/Template/cup/reference/length-classes/index.twig
+++ b/src/Template/cup/reference/length-classes/index.twig
@@ -28,7 +28,7 @@
                         {% block thead %}
                             <div class="col col-sm-1 d-none d-sm-block">#</div>
                             <div class="col">{{ 'Title'|locale }}</div>
-                            <div class="col-2 text-center">{{ 'Utit'|locale }}</div>
+                            <div class="col-2 text-center">{{ 'Unit'|locale }}</div>
                             <div class="col-2 text-right">{{ 'Value'|locale }}</div>
                             <div class="col-4 col-sm-3 text-right"></div>
                         {% endblock %}
