--- a/src/Template/cup/reference/store-locations/index.twig
+++ b/src/Template/cup/reference/store-locations/index.twig
@@ -4,7 +4,7 @@
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             <div>
-                <h2 class="text-white pb-2 fw-bold">{{ 'Store Locations'|locale }} ({{ list.count() }})</h2>
+                <h2 class="text-white pb-2 fw-bold">{{ 'Store locations'|locale }} ({{ list.count() }})</h2>
             </div>
         </div>
     </div>
