--- a/src/Template/cup/reference/social-networks/form.twig
+++ b/src/Template/cup/reference/social-networks/form.twig
@@ -5,8 +5,8 @@
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             {% include 'cup/form-header.twig' with {
                 'item': item,
-                'create': 'Create a new currency',
-                'update': 'Edit currency'
+                'create': 'Create a new social network',
+                'update': 'Edit social network'
             } only %}
         </div>
     </div>
