--- a/src/Template/cup/publication/form.twig
+++ b/src/Template/cup/publication/form.twig
@@ -53,7 +53,7 @@
                                             'args': {
                                                 'value': item.title,
                                                 'required': true,
-                                                'placeholder': 'About Us',
+                                                'placeholder': 'About Us'|locale,
                                             }
                                         } %}
                                     </div>
