--- a/src/Template/cup/catalog/order/form-modal-product.twig
+++ b/src/Template/cup/catalog/order/form-modal-product.twig
@@ -19,7 +19,7 @@
                 'type': 'select',
                 'args': {
                     'required': true,
-                    'option': _(constant('/App/Domain/References/Catalog::PRODUCT_PRICE_TYPE')),
+                    'option': _(constant('/App/Domain/References/Catalog::PRODUCT_PRICE_TYPE_USER_SELECT')),
                 }
             } %}
         </div>
