--- a/src/Template/cup/catalog/order/form.twig
+++ b/src/Template/cup/catalog/order/form.twig
@@ -211,7 +211,7 @@
                                         <th class="no-sorting">{{ 'Item'|locale }}</th>
                                         <th width="15%" class="no-sorting">{{ 'Price'|locale }}</th>
                                         <th width="15%" class="no-sorting">{{ 'Subtotal'|locale }}</th>
-                                        <th width="15%" class="no-sorting">{{ 'Count'|locale }}</th>
+                                        <th width="15%" class="no-sorting">{{ 'Count items'|locale }}</th>
                                     </tr>
                                 </thead>
                                 <tbody>
