--- a/src/Template/cup/user/group/index.twig
+++ b/src/Template/cup/user/group/index.twig
@@ -40,7 +40,7 @@
                                     <div class="col-sm-2 d-none d-sm-block">
                                         <code>
                                             {% if group.access %}
-                                                {{ 'Count'|locale }}: {{ group.access|count }}
+                                                {{ 'Permissions count'|locale }}: {{ group.access|count }}
                                             {% else %}
                                                 {{ 'No permissions'|locale }}
                                             {% endif %}
