--- a/src/Template/cup/reference/weight-classes/index.twig
+++ b/src/Template/cup/reference/weight-classes/index.twig
@@ -41,6 +41,9 @@
                                         {{ item.title }}
 
                                         <div class="text-black-50 float-right d-none d-lg-inline">
+                                            {% if item.value.value == 1 %}
+                                                <i class="fas fa-check" data-toggle="tooltip" data-placement="right" title="{{ 'Default weight'|locale }}"></i>
+                                            {% endif %}
                                             {% if item.status == 0 %}
                                                 <i class="fas fa-eye-slash" data-toggle="tooltip" data-placement="right" title="{{ 'Disabled'|locale }}"></i>
                                             {% endif %}
